--- a/web/index.html
+++ b/web/index.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="pl">
 <head>
   <base href="/">
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
+ 
+  <!-- SEO: baseline metadata for crawlability, canonical URL, and link previews (OpenGraph/Twitter). -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="HarcApp Web Platform.">
+  <link rel="canonical" href="https://harcapp.web.app/">
+
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="HarcApp">
+  <meta property="og:title" content="HarcApp Web">
+  <meta property="og:description" content="HarcApp Web Platform.">
+  <meta property="og:url" content="https://harcapp.web.app/">
+  <meta property="og:image" content="https://harcapp.web.app/icons/icon-512.png">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="HarcApp Web">
+  <meta name="twitter:description" content="HarcApp Web Platform.">
+  <meta name="twitter:image" content="https://harcapp.web.app/icons/icon-512.png">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
